RESOLVED FIXED58670
hide unused static function when SKIA_GPU is enabled
https://bugs.webkit.org/show_bug.cgi?id=58670
Summary hide unused static function when SKIA_GPU is enabled
Mike Reed
Reported 2011-04-15 10:12:52 PDT
hide unused static function when SKIA_GPU is enabled
Attachments
Patch (1.47 KB, patch)
2011-04-15 10:14 PDT, Mike Reed
fishd: review+
Mike Reed
Comment 1 2011-04-15 10:14:01 PDT
Mike Reed
Comment 2 2011-04-15 10:15:42 PDT
This local function is not referenced when SKIA_GPU is enabled, and so we get a warning (which we treat as an error). This is just to address that warning: there is no functional change.
WebKit Commit Bot
Comment 3 2011-04-15 11:46:41 PDT
Comment on attachment 89801 [details] Patch Rejecting attachment 89801 [details] from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-8', 'land-a..." exit_code: 1 Last 500 characters of output: autoinstalled/mechanize/_urllib2_fork.py", line 332, in _call_chain result = func(*args) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_urllib2_fork.py", line 1170, in https_open return self.do_open(conn_factory, req) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_urllib2_fork.py", line 1118, in do_open raise URLError(err) urllib2.URLError: <urlopen error [Errno 60] Operation timed out> Full output: http://queues.webkit.org/results/8459206
Kenneth Russell
Comment 4 2011-04-15 12:09:14 PDT
This actually landed as http://trac.webkit.org/changeset/84000 , but the update of the bug failed. Closing it manually.
WebKit Review Bot
Comment 5 2011-04-15 18:19:18 PDT
http://trac.webkit.org/changeset/84000 might have broken GTK Linux 32-bit Debug The following tests are not passing: svg/W3C-SVG-1.1/animate-elem-82-t.svg
Note You need to log in before you can comment on or make changes to this bug.