2011-04-15  Mike Reed  <reed@google.com>

Reviewed by Darin Fisher.

        hide unused static function when SKIA_GPU is enabled
        https://bugs.webkit.org/show_bug.cgi?id=58670

        No new tests. Just fixes a warning (treated as an error) when SKIA_GPU is enabled

        * platform/graphics/skia/ImageSkia.cpp:

Canonical link: https://commits.webkit.org/73753@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84000 268f45cc-cd09-0410-ab3c-d52691b4dbfc